# cuda-optix-pathtracing

./: .clang-format  .clang-tidy  .clangd  .cmake-format.py  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cycles_CornellBox.blend  README.md  imgui.ini  tidy.json  villa-daylight.exr
examples/: CMakeLists.txt
examples/acceleration-structure/: CMakeLists.txt  main.cpp  query.h  utilities.cpp  utilities.h
examples/cuda-test/: CMakeLists.txt  cuda-test.cpp  cuda-test.h  main.cpp
examples/cuda-test-2/: CMakeLists.txt  main.cu
examples/cuda-test-kernel/: CMakeLists.txt  cuda-kernel.cu  cuda-queue.h  cuda-test.cpp  cuda-test.h  main.cpp  raygen-utils.cpp  raygen-utils.h  raygen.cu
examples/empty/: CMakeLists.txt  main.cpp
examples/exshared/: CMakeLists.txt  custuff.cu  custuff.h  main.cpp
examples/filejobtest/: CMakeLists.txt  cuda-tests.cu  cuda-tests.h  main.cpp
examples/memtest/: CMakeLists.txt  main.cpp
examples/mesh/: CMakeLists.txt  main.cpp
examples/optix-playground/: CMakeLists.txt  main.cpp  optixSphere.cu  optixSphere.h
examples/platform-playground/: CMakeLists.txt  main.cpp
examples/platformplayground/: CMakeLists.txt  main.cpp  main.cu  stuff.cpp  stuff.h
examples/playground/: CMakeLists.txt  main.cu  printf.cu  printf.cuh
examples/projtest/: CMakeLists.txt  main.cpp
examples/rngtest/: CMakeLists.txt  main.cpp
examples/testbed/: CMakeLists.txt  imgui.ini  main.cpp  main.cu
examples/testcuda/: CMakeLists.txt  dummy.cu  dummy.h  main.cpp
examples/testmapunified/: CMakeLists.txt  main.cu
examples/testplot/: CMakeLists.txt  dummy.cu  main.cpp
examples/triangles/: CMakeLists.txt  bsdf.cu  common.cuh  common_math.cu  genRay.cu  main.cu  sampling.cu  testing.cu  testing.h  triangleIntersect.cu
examples/triangles/megakernel/: main.cu  megakernel.cu  megakernel.cuh
examples/triangles/megakernel_cpu/: main.cpp
examples/triangles/tests/: halton_owen.cu  halton_owen.cuh  triangle_intersect.cu  triangle_intersect.cuh
examples/triangles/wavefront/: main.cu
examples/triangles/wavefront-stream/: anyhit.cu  closesthit.cu  constants.cu  main.cu  miss.cu  raygen.cu  shade.cu  utils.cu  wave-kernels.cuh
examples/win32playground/: CMakeLists.txt  launcher.cpp  main.cpp
src/application/: CMakeLists.txt  application-display.cpp
src/core/: CMakeLists.txt  core-bsdf.cpp  core-bvh-builder.cpp  core-cudautils-cpubuild.cpp  core-light-tree-builder.cpp  core-light.cpp  core-material.cpp  core-math.cpp  core-mesh-parser.cpp  core-parser.cpp  core-primitive.cpp  core-render.cpp  core-texture-cache.cpp  core-texture-cache.linux.cpp  core-texture-cache.win32.cpp  core-texture.cpp  core-trianglemesh.cpp
src/core/private/: core-bsdf.cpp  core-bvh-builder.cpp  core-light-tree-builder.cpp  core-light.cpp  core-material.cpp  core-math.cpp  core-math.cu  core-mesh-parser.cpp  core-parser.cpp  core-primitive.cpp  core-render.cpp  core-texture-cache.cpp  core-texture-cache.linux.cpp  core-texture-cache.win32.cpp  core-texture.cpp  core-texture.cu  core-trianglemesh.cpp  cuda-constants.cu
src/core/public/: core-bsdf.h  core-bvh-builder.h  core-constants.h  core-dstd.h  core-light-tree-builder.h  core-light.h  core-macros.h  core-material.h  core-math.h  core-mesh-parser.h  core-parser.h  core-primitive.h  core-render.cuh  core-render.h  core-texture-cache.h  core-texture.h  core-trianglemesh.h  core-types.h  cuda-constants.cuh
src/cuda/: CMakeLists.txt  cudaTest.cu
src/cuda-wrappers/: CMakeLists.txt  cuda-wrappers-utils.cpp
src/cudautils/: CMakeLists.txt  cudautils-bvh.cu  cudautils-bxdf.cu  cudautils-camera.cu  cudautils-color.cu  cudautils-film.cu  cudautils-filter.cu  cudautils-float.cu  cudautils-image.cpp  cudautils-image.cu  cudautils-light.cu  cudautils-lightsampler.cu  cudautils-material.cu  cudautils-media.cu  cudautils-numbers.cu  cudautils-rng.cu  cudautils-sampler.cu  cudautils-spectrum.cu  cudautils-texture.cu  cudautils-transform.cu  cudautils-vecconv.cuh  cudautils-vecmath.cu  cudautils.cu
src/middleware/: CMakeLists.txt  middeleware-utils.cpp  middleware-model.cu  middleware-parser.cpp  middleware.cpp
src/new-core/: CMakeLists.txt
src/platform/: CMakeLists.txt  cudaTest.cu  platform-context.cpp  platform-context.cu  platform-cuda-fileMapping.linux.cu  platform-cuda-fileMapping.win32.cu  platform-cuda-utils.cu  platform-display.cpp  platform-file.linux.cpp  platform-file.win32.cpp  platform-logging-default-formatters.cpp  platform-logging-default-formatters.cu  platform-logging.cpp  platform-logging.linux.cpp  platform-logging.win32.cpp  platform-memory.cpp  platform-memory.linux.cpp  platform-memory.win32.cpp  platform-os-utils-macros.h  platform-os-utils.cpp  platform-os-utils.h  platform-os-utils.linux.cpp  platform-os-utils.linux.h  platform-os-utils.win32.cpp  platform-os-utils.win32.h  platform-threadPool.cpp  platform-threadPool.linux.cpp  platform-threadPool.win32.cpp  platform-utils.cpp  platform-utils.linux.cpp  platform-utils.win32.cpp  platform.cpp
src/platform/cuda/: cudaTest.cu
src/platform/private/: platform-context.cpp  platform-file.linux.cpp  platform-file.win32.cpp  platform-launch.cpp  platform-logging.cpp  platform-logging.linux.cpp  platform-logging.win32.cpp  platform-memory-stackAllocator.cpp  platform-memory.cpp  platform-memory.linux.cpp  platform-memory.win32.cpp  platform-memory.win32.h  platform-os-utils.linux.cpp  platform-os-utils.linux.h  platform-os-utils.win32.cpp  platform-os-utils.win32.h  platform-threadPool.cpp  platform-threadPool.linux.cpp  platform-threadPool.win32.cpp  platform-utils.cpp  platform-utils.linux.cpp  (+2 more)
src/projtest/: CMakeLists.txt  testImplementationunit.cpp
test/: CMakeLists.txt
test/platform/: platform-logging.test.cpp  platform.test.cpp
test/projtest/: projtest.test.cpp
test/shared/: dmtutils.cpp  dmtutils.h
test/testdmt/: projtest.test.cpp
test/testdmtpartitions/: testdmtpartitions-implonly.test.cpp  testdmtpartitions-moretrig.test.cpp  testdmtpartitions-trig.test.cpp  testdmtpartitions.test.cpp
training/win32/: CMakeLists.txt
(+277 files in other folders)
