add_subdirectory(testbed)
add_subdirectory(memtest)
add_subdirectory(filejobtest)
add_subdirectory(testcuda)
add_subdirectory(exshared)
add_subdirectory(testplot)
add_subdirectory(testmapunified)
add_subdirectory(playground)
add_subdirectory(platformplayground)
if(DEFINED DMT_OS_WINDOWS)
  add_subdirectory(win32playground)
endif()
